--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -182,9 +182,9 @@ a#mobile_menu {
   color: #ffffff;
   width: 50px;
   height: 50px;
-  display: block;
-  text-align: center;
-  line-height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: fixed;
   top: 15px;
   right: 15px;
